--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+[Aa]ssets/Grassland\ Terrain
+[Aa]ssets/_TerrainAutoUpgrade
